# final-nn

./: autoencoder_digits.ipynb  pyproject.toml  rap1_classifier.ipynb
.github/workflows/: actions.yml  testing.yml
nn/: nn.py  preprocess.py
test/: test_nn.py
