[build-system]
requires = [
	"flit_core >=3.2,<4",
	]
build-backend = "flit_core.buildapi"

[project]
name = "final-nn"
authors = [{name = "Tara Pande", email = "tara.pande@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest", "numpy", "matplotlib", "sklearn" 
]

[tool.flit.metadata]
module = "nn"

[project.urls]
Home = "https://github.com/TaraSPande/final-nn"
